--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
