--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
+    "dataloader-sequelize": "^2.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
     "graphql": "^15.0.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
