--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "dataloader-sequelize": "^2.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
