--- a/server/package.json
+++ b/server/package.json
@@ -34,5 +34,8 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
