--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.melissay94.github.io/giftbasket",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
     "@date-io/date-fns": "^1.3.13",
@@ -30,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,7 +48,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "gh-pages": "^2.2.0"
+    "eslint-config-airbnb": "^18.1.0"
   }
 }
