Removed unused package

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "engines": {
     "node": "13.6.0"
@@ -32,7 +32,6 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "graphql": "^15.0.0",
-    "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
